--- a/G431_MF5010.ioc
+++ b/G431_MF5010.ioc
@@ -9,15 +9,16 @@ ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
 ADC1.master=1
+ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC2.CommonPathInternal=null|null|null|null
 ADC2.ContinuousConvMode=DISABLE
 ADC2.EnableInjectedConversion=ENABLE
 ADC2.EnableRegularConversion=DISABLE
 ADC2.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJEC_T1_CC4
-ADC2.IPParameters=ContinuousConvMode,EnableRegularConversion,EnableInjectedConversion,InjectedRank-1\#ChannelInjectedConversion,InjectedChannel-1\#ChannelInjectedConversion,InjectedSamplingTime-1\#ChannelInjectedConversion,InjectedOffsetNumber-1\#ChannelInjectedConversion,InjectedRank-2\#ChannelInjectedConversion,InjectedChannel-2\#ChannelInjectedConversion,InjectedSamplingTime-2\#ChannelInjectedConversion,InjectedOffsetNumber-2\#ChannelInjectedConversion,InjectedRank-3\#ChannelInjectedConversion,InjectedChannel-3\#ChannelInjectedConversion,InjectedSamplingTime-3\#ChannelInjectedConversion,InjectedOffsetNumber-3\#ChannelInjectedConversion,InjNumberOfConversion,ExternalTrigInjecConv,CommonPathInternal
+ADC2.IPParameters=ContinuousConvMode,EnableRegularConversion,EnableInjectedConversion,InjectedRank-1\#ChannelInjectedConversion,InjectedChannel-1\#ChannelInjectedConversion,InjectedSamplingTime-1\#ChannelInjectedConversion,InjectedOffsetNumber-1\#ChannelInjectedConversion,InjectedRank-2\#ChannelInjectedConversion,InjectedChannel-2\#ChannelInjectedConversion,InjectedSamplingTime-2\#ChannelInjectedConversion,InjectedOffsetNumber-2\#ChannelInjectedConversion,InjectedRank-3\#ChannelInjectedConversion,InjectedChannel-3\#ChannelInjectedConversion,InjectedSamplingTime-3\#ChannelInjectedConversion,InjectedOffsetNumber-3\#ChannelInjectedConversion,InjNumberOfConversion,ExternalTrigInjecConv,ClockPrescaler,CommonPathInternal
 ADC2.InjNumberOfConversion=3
 ADC2.InjectedChannel-1\#ChannelInjectedConversion=ADC_CHANNEL_VOPAMP2
 ADC2.InjectedChannel-2\#ChannelInjectedConversion=ADC_CHANNEL_VOPAMP3_ADC2
@@ -295,7 +296,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_OPAMP2_Init-OPAMP2-false-HAL-true,6-MX_OPAMP3_Init-OPAMP3-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_ADC2_Init-ADC2-false-HAL-true,10-MX_DAC3_Init-DAC3-false-HAL-true,11-MX_OPAMP1_Init-OPAMP1-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_TIM4_Init-TIM4-false-HAL-true,15-MX_TIM7_Init-TIM7-false-HAL-true,16-MX_CRC_Init-CRC-false-HAL-true,17-MX_RNG_Init-RNG-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_OPAMP2_Init-OPAMP2-false-HAL-true,6-MX_OPAMP3_Init-OPAMP3-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_ADC2_Init-ADC2-false-HAL-true,10-MX_DAC3_Init-DAC3-false-HAL-true,11-MX_OPAMP1_Init-OPAMP1-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_TIM4_Init-TIM4-false-HAL-true,15-MX_TIM7_Init-TIM7-false-HAL-true,16-MX_RNG_Init-RNG-false-HAL-true
 RCC.ADC12Freq_Value=168000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1Freq_Value=168000000
